[package]
name = "icp_hello_world_rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.3"
ic-cdk = "0.14.0"
ic-cdk-macros = "0.14.0"
serde = "1.0"
serde_json = "1.0"


[dev-dependencies]
pocket-ic = "3.1.0"


